Signed-off-by: mouxuefei <villa_mou@126.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">SlidingDemo</string>
+    <string name="my_txt">AppBarLayout继承自LinearLayout，布局方向为垂直方向。
+        所以你可以把它当成垂直布局的LinearLayout来使用。AppBarLayout是在LinearLayou上加了一些材料设计的概念，
+        它可以让你定制当某个可滚动View的滚动手势发生变化时，其内部的子View实现何种动作。
+        AppBarLayout继承自LinearLayout，布局方向为垂直方向。
+        所以你可以把它当成垂直布局的LinearLayout来使用。AppBarLayout是在LinearLayou上加了一些材料设计的概念，
+        它可以让你定制当某个可滚动View的滚动手势发生变化时，其内部的子View实现何种动作。
+        AppBarLayout继承自LinearLayout，布局方向为垂直方向。
+        所以你可以把它当成垂直布局的LinearLayout来使用。AppBarLayout是在LinearLayou上加了一些材料设计的概念，
+        它可以让你定制当某个可滚动View的滚动手势发生变化时，其内部的子View实现何种动作。
+          AppBarLayout继承自LinearLayout，布局方向为垂直方向。
+        所以你可以把它当成垂直布局的LinearLayout来使用。AppBarLayout是在LinearLayou上加了一些材料设计的概念，
+        它可以让你定制当某个可滚动View的滚动手势发生变化时，其内部的子View实现何种动作。
+        AppBarLayout继承自LinearLayout，布局方向为垂直方向。
+        所以你可以把它当成垂直布局的LinearLayout来使用。AppBarLayout是在LinearLayou上加了一些材料设计的概念，
+        它可以让你定制当某个可滚动View的滚动手势发生变化时，其内部的子View实现何种动作。
+</string>
 </resources>
